--- a/store.html
+++ b/store.html
@@ -45,61 +45,61 @@
       model: "HP pavilion 15",
       specs: "Intel Core i3 6th Gen, 8GB RAM, 500GB HDD, 15.6 screen size, Windows 11 pro",
       price: "₦230,000",
-      images: ["/images/pavilion.jpg", "/images/pavilion 2.jpg", "/images/pavilion.jpg"]
+      images: ["pavilion.jpg", "pavilion 2.jpg", "pavilion.jpg"]
     },
     {
       model: "HP EliteBook 830 G5",
       specs: "Intel Core i5 8th Gen, 8GB RAM, 256GB SSD, 13-inches screen size,keyboard light, Windows 11",
       price: "₦350,000",
-      images: ["/images/G5.jpg", "/images/g52.jpg", "/images/g53.jpg"]
+      images: ["G5.jpg", "g52.jpg", "g53.jpg"]
     },
     {
       model: "HP EliteBook 840 G6",
       specs: "Intel Core i5 8th Gen, 8GB RAM, 256GB SSD, 14-inch Display, Keyboard backlight, Windows 11",
       price: "₦360,000",
-      images: ["/images/g6.jpg", "/images/g61.jpg", "/images/g62.jpg"]
+      images: ["g6.jpg", "g61.jpg", "g62.jpg"]
     },
      {
       model: "HP EliteBook 830 G6",
       specs: "Intel Core i7 8th Gen, 8GB RAM, 256GB SSD, 13-inch Display, Keyboard backlight, Windows 11",
       price: "₦380,000",
-      images: ["/images/g63.jpg", "/images/g64.jpg", "/images/g65.jpg"]
+      images: ["g63.jpg", "g64.jpg", "g65.jpg"]
     },
     {
       model: "HP Elitebook 1040 G7 x360",
       specs: "Intel Core i7 10th Gen, 16GB RAM, 256GB SSD, 14-inch Display, Keyboard backlight, Touchscreen, Fingerprint, Face id, Windows 11",
       price: "₦750,000",
-      images: ["/images/g4.jpg", "/images/g4.jpg", "/images/g4.jpg"]
+      images: ["g4.jpg", "g4.jpg", "g4.jpg"]
     },
      {
       model: "HP Dragon Fly x360",
       specs: "Intel Core i7 8th Gen, 16GB RAM, 512GB SSD, 13-inch Display, Keyboard backlight, Touchscreen, Fingerprint, Face id, Windows 11",
       price: "₦690,000",
-      images: ["/images/fly1.jpg", "/images/fly2.jpg", "/images/fly3.jpg"]
+      images: ["fly1.jpg", "fly2.jpg", "fly3.jpg"]
     },
     {
       model: "HP Elitebook 820 G2",
       specs: "Intel Core i5 5th Gen, 8GB RAM, 500GB HDD, 13-inch Display, Keyboard backlight, Windows 11",
       price: "₦220,000",
-      images: ["/images/g2.jpg", "/images/g22.jpg", "/images/g23.jpg"]
+      images: ["g2.jpg", "g22.jpg", "g23.jpg"]
     },
     {
       model: "HP EliteBook 840 G3",
       specs: "Intel Core i7 6th Gen, 8GB RAM, 500GB HDD + 256 SSD, 14-inch Display, Keyboard backlight, Windows 11, Fingerprint, Touchscreen",
       price: "₦360,000",
-      images: ["/images/g3.jpg", "/images/g32.jpg", "/images/g33.jpg"]
+      images: ["g3.jpg", "g32.jpg", "g33.jpg"]
     },
      {
       model: "HP ProBook 450 G5",
       specs: "Intel Core i5 8th Gen, 8GB RAM, 256 SSD, 15.6-inch Display, Keyboard backlight, Windows 11, Fingerprint",
       price: "₦280,000",
-      images: ["/images/pro.jpg", "/images/pro1.jpg", "/images/pro2.jpg"]
+      images: ["pro.jpg", "pro1.jpg", "pro2.jpg"]
     },
     {
       model: "HP EliteBook 1030 G2 x360",
       specs: "Intel Core i5 7th Gen, 8GB RAM, 256 SSD, 14-inch Display, Keyboard backlight,Finger print, Face id, Windows 11",
       price: "₦460,000",
-      images: ["/images/g24.jpg", "/images/g25.jpg", "/images/g26.jpg"]
+      images: ["g24.jpg", "g25.jpg", "g26.jpg"]
     },
   ];
 
