--- a/store.html
+++ b/store.html
@@ -69,7 +69,7 @@
       model: "HP Elitebook 1040 G4 x360",
       specs: "Intel Core i7 10th Gen, 16GB RAM, 256GB SSD, 14-inch Display, Keyboard backlight, Touchscreen, Fingerprint, Face id, Windows 11",
       price: "₦750,000",
-      images: ["g4.jpg", "g4.jpg", "g4.jpg"]
+      images: ["G4.jpg", "G4.jpg", "G4.jpg"]
     },
      {
       model: "HP Dragon Fly x360",
