--- a/index.html
+++ b/index.html
@@ -757,6 +757,9 @@
     <a href="https://wa.me/2347013930533" target="_blank" style="color: #25D366; font-size: 2rem; text-decoration: none;" aria-label="Chat with us on WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
+ <a href="https://www.facebook.com" target="_blank" style="color: #25D366; font-size: 2rem; text-decoration: none;" aria-label="Chat with us on Facebook">
+        <i class="fab fa-facebook"></i>
+    </a>
     <p style="margin-top: 1rem; font-size: 0.9rem; color: #a1a1aa;">© 2025 E-Tech Solutions. All rights reserved.</p>
 </footer>
     <script>
