--- a/index.html
+++ b/index.html
@@ -752,15 +752,20 @@
         </div>
     </section>
 
-    <!-- Footer -->
-<footer style="text-align: center; padding: 2rem 0; background-color: #0a0a0b; color: white;">
-    <a href="https://wa.me/2347013930533" target="_blank" style="color: #25D366; font-size: 2rem; text-decoration: none;" aria-label="Chat with us on WhatsApp">
-        <i class="fab fa-whatsapp"></i>
-    </a>
- <a href="https://www.facebook.com" target="_blank" style="color: #25D366; font-size: 2rem; text-decoration: none;" aria-label="Chat with us on Facebook">
-        <i class="fab fa-facebook"></i>
-    </a>
-    <p style="margin-top: 1rem; font-size: 0.9rem; color: #a1a1aa;">© 2025 E-Tech Solutions. All rights reserved.</p>
+   <!-- Footer -->
+<footer style="text-align: center; padding: 2rem 0; background-color: #343a40; color: white;">
+    <div style="margin-bottom: 1rem;">
+        <a href="https://wa.me/2347013930533" target="_blank" style="color: #25D366; font-size: 2.5rem; text-decoration: none;" aria-label="Chat with us on WhatsApp">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="https://www.facebook.com/yourprofile" target="_blank" style="color: #3b5998; font-size: 2.5rem; text-decoration: none; margin-left: 1.5rem;" aria-label="Follow us on Facebook">
+            <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://www.linkedin.com/company/yourcompany" target="_blank" style="color: #0077b5; font-size: 2.5rem; text-decoration: none; margin-left: 1.5rem;" aria-label="Connect with us on LinkedIn">
+            <i class="fab fa-linkedin"></i>
+        </a>
+    </div>
+    <p style="margin-top: 1rem; font-size: 1rem; color: #ddd;">© 2025 E-Tech Solutions. All rights reserved.</p>
 </footer>
     <script>
         // Smooth scrolling and navigation
