--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
         <a href="https://wa.me/2347013930533" target="_blank" style="color: #25D366; font-size: 2.5rem; text-decoration: none;" aria-label="Chat with us on WhatsApp">
             <i class="fab fa-whatsapp"></i>
         </a>
-        <a href="https://www.facebook.com/yourprofile" target="_blank" style="color: #3b5998; font-size: 2.5rem; text-decoration: none; margin-left: 1.5rem;" aria-label="Follow us on Facebook">
+        <a href="https://www.facebook.com/share/17xmyqBB7c/?mibextid=qi2Omg" target="_blank" style="color: #3b5998; font-size: 2.5rem; text-decoration: none; margin-left: 1.5rem;" aria-label="Follow us on Facebook">
             <i class="fab fa-facebook"></i>
         </a>
         <a href="https://www.linkedin.com/company/yourcompany" target="_blank" style="color: #0077b5; font-size: 2.5rem; text-decoration: none; margin-left: 1.5rem;" aria-label="Connect with us on LinkedIn">
