--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
         <a href="https://www.facebook.com/share/17xmyqBB7c/?mibextid=qi2Omg" target="_blank" style="color: #3b5998; font-size: 2.5rem; text-decoration: none; margin-left: 1.5rem;" aria-label="Follow us on Facebook">
             <i class="fab fa-facebook"></i>
         </a>
-        <a href="https://www.linkedin.com/company/yourcompany" target="_blank" style="color: #0077b5; font-size: 2.5rem; text-decoration: none; margin-left: 1.5rem;" aria-label="Connect with us on LinkedIn">
+        <a href="https://www.linkedin.com/company/e_tech_solutions01/" target="_blank" style="color: #0077b5; font-size: 2.5rem; text-decoration: none; margin-left: 1.5rem;" aria-label="Connect with us on LinkedIn">
             <i class="fab fa-linkedin"></i>
         </a>
     </div>
