--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
 
     <!-- Special Offers Section -->
     <section class="section" id="offers">
-        <h2 class="section-title fade-in">Start Risk-Free</h2>
+        <h2 class="section-title fade-in">Special Offers</h2>
         
         <div class="services-grid">
             <div class="service-card fade-in" style="border: 2px solid var(--accent);">
