--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
         
         <div class="hero-content">
             <h1>Your Business IT Partner In This Digital Age</h1>
-            <p class="hero-subtitle">On-site tech support, AI training, and reliable maintenance for schools and businesses in Port Harcourt - we bring tech solutions to your door step</p>
+            <p class="hero-subtitle">On-site tech support, AI training, and reliable maintenance for schools and businesses - we bring tech solutions to your door step</p>
             <a href="#services" class="cta-button">Get Free Tech Assessment</a>
         </div>
     </section>
